Add header to landing page

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,3 +1,20 @@
-<p>
-  home works!
-</p>
+<main>
+  <section class="welcomeArea">
+    <figure>
+      <img
+        src="https://d3i4yxtzktqr9n.cloudfront.net/web-eats-v2/bd4c2537aa3799e345a397e7e4c9cbac.svg"
+        class="welcomeImage" alt="Home Image">
+      <figcaption>
+        <div class="item1">
+          <h1>Foodiez App</h1>
+        </div>
+        <div class="item2">
+          <h6>ORDER FOOD FROM THE BEST RESTAURANTS IN TOWN</h6>
+        </div>
+      </figcaption>
+      
+    </figure>
+    <div class="container-fluid">
+    </div>
+  </section>
+</main>
