Add restaurant card

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,20 +1,32 @@
 <main>
   <section class="welcomeArea">
-    <figure>
-      <img
-        src="https://d3i4yxtzktqr9n.cloudfront.net/web-eats-v2/bd4c2537aa3799e345a397e7e4c9cbac.svg"
-        class="welcomeImage" alt="Home Image">
-      <figcaption>
-        <div class="item1">
-          <h1>Foodiez App</h1>
-        </div>
-        <div class="item2">
-          <h6>ORDER FOOD FROM THE BEST RESTAURANTS IN TOWN</h6>
-        </div>
-      </figcaption>
-      
-    </figure>
+
+      <section class="jumbotron jumbotron-fluid text-center d-flex align-items-center">
+          <div class="container header align-middle">
+            <h1 class="jumbotron-heading">Foodiez App</h1>
+            <p class="lead">ORDER FOOD FROM THE BEST RESTAURANTS IN TOWN</p>
+          </div>
+      </section>
+
     <div class="container-fluid">
+
+      <div class="moreHeader">
+        <div>
+          <h2>POPULAR RESTAURANTS</h2>
+        </div>
+        <div class="btn-group">
+            <button type="button" class="btn btn-light dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              Locations
+            </button>
+            <div class="dropdown-menu dropdown-menu-right">
+              <button class="dropdown-item" type="button">Action</button>
+              <button class="dropdown-item" type="button">Another action</button>
+              <button class="dropdown-item" type="button">Something else here</button>
+            </div>
+          </div>
+      </div>
+      <hr>
+
     </div>
   </section>
 </main>
