--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -1,80 +1,54 @@
 
-main figure {
-  position: relative;
-}
-
-main .welcomeImage {
-  width: 100%;
-  height: 400px;
-  object-fit: cover;
-}
-
-.item1 {
-  grid-area: header;
-}
-.item2 {
-    grid-area: subheader;
+  .jumbotron{
+    margin-top: 40px;
+    background: url('https://d3i4yxtzktqr9n.cloudfront.net/web-eats-v2/bd4c2537aa3799e345a397e7e4c9cbac.svg') no-repeat center center fixed; 
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    -o-background-size: cover;
+    background-size: cover;
+    width: 100%;
+    height: 75vh;
+    display: flex;
   }
-
-main figcaption {
-    display: grid;
-    grid-template-areas:
-      'header'
-      'subheader';
-    align-items: center;
-    position: absolute;
-    width: 50%;
-    height: 25%;
-    top: 47.5%;
-    right: 25%;
-    background-color: white;
-    font-weight: bold;
+  .jumbotron .header{
+    background-color: #fdfdfd;
+    border: 1px solid #b8aba9;
+    width: 40%;
+    text-transform: uppercase;
     text-align: center;
     text-transform: uppercase;
-    color: #7a6d6a;
-    border: 2px solid #c3bcba;
-      letter-spacing: 1px;
+    color: rgb(83, 74, 73);
+    letter-spacing: 2px;
+    line-height: 60px;
+    font-size: 2.2rem;
+    font-weight: 800;
+    padding-top: 20px;
   }
-
-main figcaption h1 {
-  letter-spacing: 2px;
-  line-height: 60px;
-  font-size: 2.2rem;
-  font-weight: 800;
-  color: #666;
+  h1::after {
+    content: '';
+    background: rgb(83, 74, 73);
+    display: block;
+    height: 2px;
+    width: 50%;
+    margin: 12px auto 20px;
 }
-
-main figcaption h6 {
+  .jumbotron .header .lead{
     letter-spacing: 1px;
     line-height: 30px;
     font-size: 0.9rem;
     font-weight: 700;
-    color: #666;
+  }
 
-  }
-h4 {
-  font-size: 1.2rem;
-  text-align: center;
-  color: #333;
-}
 
-@media only screen and (max-width: 845px) {
-  main figcaption h1 {
-    font-size: 1.5rem;
-    line-height: 10px;
-  }
-  main figcaption h6 {
-    font-size: 0.7rem;
-    line-height: 20px;
-  }
-}
+
 
 @media only screen and (max-width: 745px) {
-  main figcaption h1 {
+  h1 {
     font-size: 1.1rem;
     padding-top: 15px;
   }
-  main figcaption h6 {
+
+  h6 {
     font-size: 0.7rem;
     line-height: 15px;
   }
@@ -82,3 +56,26 @@ h4 {
     font-size: 1.2em;
   }
 }
+.moreHeader{
+  padding-top: 15px;
+  width: 90%;
+  display: flex;
+  justify-content: space-between
+}
+.moreHeader h2 {
+  font-weight: 400;
+  font-size: 1.5em;
+  margin-left: 40px;
+} 
+.btn-group{
+  margin-right: -70px;
+  text-align: right;
+}
+
+
+hr{
+  margin-bottom: 35px;
+}
+
+
+
