--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -10,18 +10,20 @@
 
     <div class="container-fluid">
 
-      <div class="moreHeader">
-        <div>
+        <div class="moreHeader row">
+            <div col-sm-6>
           <h2>POPULAR RESTAURANTS</h2>
         </div>
-        <div class="btn-group">
+        <div class="btn-group ">
             <button type="button" class="btn btn-light dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
               Locations
             </button>
             <div class="dropdown-menu dropdown-menu-right">
-              <button class="dropdown-item" type="button">Action</button>
-              <button class="dropdown-item" type="button">Another action</button>
-              <button class="dropdown-item" type="button">Something else here</button>
+                <a class="dropdown-item" routerLink="/restaurant-list">Location1</a>
+                <a class="dropdown-item" routerLink="/restaurant-list">Location2</a>
+                <a class="dropdown-item" routerLink="/restaurant-list">Location3</a>
+                <a class="dropdown-item" routerLink="/restaurant-list">Location4</a>
+                <a class="dropdown-item" routerLink="/restaurant-list">Location5</a>
             </div>
           </div>
       </div>
