--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -11,26 +11,25 @@
     <div class="container-fluid">
 
         <div class="moreHeader row">
-            <div col-sm-6>
+            <div col-xs-6>
           <h2>POPULAR RESTAURANTS</h2>
         </div>
         <div class="btn-group ">
-            <button type="button" class="btn btn-light dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              Locations
-            </button>
+          <button type="button" class="btn btn-light dropdown-toggle" data-toggle="dropdown" aria-haspopup="true"
+            aria-expanded="false">
+            Location
+          </button>
             <div class="dropdown-menu dropdown-menu-right">
                 <a class="dropdown-item" routerLink="/restaurant-list">Location1</a>
                 <a class="dropdown-item" routerLink="/restaurant-list">Location2</a>
-                <a class="dropdown-item" routerLink="/restaurant-list">Location3</a>
-                <a class="dropdown-item" routerLink="/restaurant-list">Location4</a>
-                <a class="dropdown-item" routerLink="/restaurant-list">Location5</a>
             </div>
           </div>
       </div>
       <hr>
-
     </div>
   </section>
 </main>
 
 <restaurant-card></restaurant-card>
+<app-footer></app-footer>
+
