--- a/src/app/components/restaurant-card/restaurant-card.component.css
+++ b/src/app/components/restaurant-card/restaurant-card.component.css
@@ -1,10 +1,11 @@
 /*------CSS Grid------*/
 .grid-container2 {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
     grid-gap: 1rem;
     width: 86%;
     margin: 0 auto;
+    margin-bottom: 50px;
 }
 /*------Popular Restaurants Sections--------*/
 
@@ -14,10 +15,11 @@
 }
 .grid-container {
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
     grid-gap: 1rem;
     width: 86%;
     margin: 0 auto;
+    margin-bottom: 50px;
 }
 /*------Card Section-----*/
 .card {
