--- a/src/app/components/restaurants/restaurants.component.html
+++ b/src/app/components/restaurants/restaurants.component.html
@@ -14,8 +14,9 @@
           <div col-sm-6>
             <h2> Highest Rated in {{location-title}} </h2>
           </div>
-          <div class="btn-group">
-              <button type="button" class="btn btn-light dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          <div class="btn-group ">
+            <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-haspopup="true"
+              aria-expanded="false">
                 Categories
               </button>
               <div class="dropdown-menu dropdown-menu-right">
@@ -26,15 +27,12 @@
             </div>
         </div>
         <hr>
-  
       </div>
     </section>
   </main>
 
 <restaurant-card></restaurant-card>
-
 <hr>
+<restaurant-card></restaurant-card>
 
-<restaurant-card></restaurant-card>
-<restaurant-card></restaurant-card>
-<restaurant-card></restaurant-card>
+<app-footer></app-footer>
