--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -36,24 +36,35 @@
     letter-spacing: 1px;
     line-height: 30px;
     font-size: 0.9rem;
-    font-weight: 700;
+    font-weight: 600;
   }
 
 .moreHeader{
   padding-top: 15px;
-  width: 90%;
+  width: 95%;
   margin: 0 auto;
   display: flex;
-  justify-content: space-between
+  justify-content: space-between;
 }
 hr{
   margin-bottom: 35px;
+}
+.btn .btn-light{
+  background-color: #f1f1f1!important;
+  border-radius: none;
+}
+
+.btn .btn-light:hover{
+  background-color: #ffffff!important;
+  border-radius: none;
 }
 
 @media only screen and (max-width: 745px) {
   h1 {
     font-size: 1.1rem;
     padding-top: 15px;
+    color: #333;
+
   }
 
   .lead {
@@ -63,6 +74,11 @@ hr{
 
   h4 {
     font-size: 1.2em;
+  }
+  .moreHeader {
+    font-size: 1.2em;
+    margin: none;
+
   }
   .moreHeader h2 {
     font-size: 1.2em;
