--- a/src/app/components/restaurants/restaurants.component.css
+++ b/src/app/components/restaurants/restaurants.component.css
@@ -56,12 +56,15 @@ h1::after {
   font-weight: 400;
   font-size: 1.5em;
 }
-
-.btn-group {
-  text-align: right;
+.btn-light{
+  background-color: #f1f1f1!important;
+  border-radius: none;
 }
 
-
+.btn-light :hover{
+  background-color: #ffffff!important;
+  border-radius: none;
+}
 hr {
   margin-bottom: 35px;
 }
