Update restaurant card style

--- a/src/app/components/rest/rest.component.html
+++ b/src/app/components/rest/rest.component.html
@@ -1,5 +1,8 @@
-<p>
-  rest works!
-</p>
+<section class="jumbotron jumbotron-fluid text-center d-flex align-items-center">
+  <div class="container header align-middle">
+    <h1 class="jumbotron-heading">Foodiez App</h1>
+    <p class="lead">ORDER FOOD FROM THE BEST RESTAURANTS IN TOWN</p>
+  </div>
+</section>
 
 <app-footer></app-footer>
