--- a/src/app/components/home/home.component.css
+++ b/src/app/components/home/home.component.css
@@ -45,16 +45,22 @@
   margin: 0 auto;
   display: flex;
   justify-content: space-between;
+  color: #444;
+
 }
 hr{
   margin-bottom: 35px;
 }
-.btn .btn-light{
+.btn {
+  border: none!important;
+}
+.btn-light{
   background-color: #f1f1f1!important;
-  border-radius: none;
+  border-radius: none!important;
 }
 
-.btn .btn-light:hover{
+.btn-light :hover,
+.btn-light :onclick{
   background-color: #ffffff!important;
   border-radius: none;
 }
