--- a/src/app/components/restaurant-card/restaurant-card.component.html
+++ b/src/app/components/restaurant-card/restaurant-card.component.html
@@ -2,22 +2,32 @@
     <section id="more">
       <div class="grid-container popular">
         <div *ngFor = "let restaurant of restaurants; let i='index'">
-          <div class="card">
-            <img class="card-img-top" src="{{restaurant.image}" alt="Card image" style="width:100%">
-                <div class="card-body">
-                  <h4 class="card-title">{{restaurant.name}}</h4>
-                  <h6 class=" card-title">{{restaurant.location}}</h6>
-            <span class="card-meta">
-              <i class="ion-android-star"></i>
-              <i class="ion-android-star"></i>
-              <i class="ion-android-star"></i>
-              <i class="ion-android-star-outline"></i>
-              <i class="ion-android-star-outline"></i>
-            </span><br>
-            <span class="card-meta">115 Reviews</span>
-          </div>
-        </div>
+              <!-- Card Light -->
+<div class="card">
+
+  <!-- Card image -->
+  <div class="view overlay">
+    <img class="card-img-top" src="https://mdbootstrap.com/img/Photos/Horizontal/Nature/4-col/img%20%28131%29.jpg" alt="Card image cap">
+    <a>
+      <div class="mask rgba-white-slight"></div>
+    </a>
+  </div>
+
+  <!-- Card content -->
+  <div class="card-body">
+    <!-- Title -->
+    <h4 class="card-title">{{restaurant.name}}</h4>
+    <hr>
+    <!-- Text -->
+    <p class="card-text">{{restaurant.location}}</p>
+    <!-- Link -->
+    <a href="#!" class="grey-text d-flex justify-content-end"><h5>Visit <i class="fas fa-angle-double-right"></i></h5></a>
+  </div>
+
+</div>
+<!-- Card Light -->
       </div>
       </div>
     </section>
     <!-- </section> -->
+
