--- a/src/app/components/rest/rest.component.css
+++ b/src/app/components/rest/rest.component.css
@@ -1,4 +1,4 @@
-.jumbotron {
+.main-header {
   margin-top: 40px;
   background: url('https://d3i4yxtzktqr9n.cloudfront.net/web-eats-v2/bd4c2537aa3799e345a397e7e4c9cbac.svg') no-repeat center center fixed;
   -webkit-background-size: cover;
@@ -6,16 +6,14 @@
   -o-background-size: cover;
   background-size: cover;
   width: 100%;
-  height: 75vh;
+  height: 60vh;
   display: flex;
 }
 
-.jumbotron .header {
+.header {
   background-color: #fdfdfd;
   border: 1px solid #b8aba9;
   width: 40%;
-  text-transform: uppercase;
-  text-align: center;
   text-transform: uppercase;
   color: rgb(83, 74, 73);
   letter-spacing: 2px;
@@ -25,18 +23,72 @@
   padding-top: 20px;
 }
 
-h1::after {
+h3:after {
   content: '';
   background: rgb(83, 74, 73);
   display: block;
-  height: 2px;
+  height: 1px;
   width: 50%;
   margin: 12px auto 20px;
 }
 
 .jumbotron .header .lead {
   letter-spacing: 1px;
-  line-height: 30px;
+  line-height: 15px;
   font-size: 0.9rem;
-  font-weight: 600;
+  font-weight: 400;
+}
+
+@media only screen and (max-width: 745px) {
+  h3 {
+    font-size: 1.1rem;
+    padding-top: 15px;
+    color: #333;
+  }
+
+  .lead {
+    font-size: 0.7rem !important;
+    line-height: 15px;
+  }
+
+  h4 {
+    font-size: 1.2em;
+  }
+
+  .moreHeader {
+    font-size: 1.2em;
+    margin: none;
+  }
+
+  .moreHeader h2 {
+    font-size: 1.2em;
+  }
+
+}
+.nav1{
+  margin-top: -40px;
+}
+
+/*-Restaurant Menu------*/
+h4:after {
+  content: '';
+  background: rgb(83, 74, 73);
+  display: block;
+  height: 1px;
+  width: 15%;
+  margin: 12px 0px;
+}
+
+.menu{
+  border-radius: 0;
+  background-color: #fbfbfb;
+  width: 80%;
+  margin: 0 auto;
+  margin-top: 40px;
+  margin-bottom: 40px;
+
+}
+
+.nav-main .nav-item{
+  padding-left: 50px;
 }
