--- a/src/app/components/restaurant-card/restaurant-card.component.html
+++ b/src/app/components/restaurant-card/restaurant-card.component.html
@@ -21,7 +21,7 @@
     <!-- Text -->
     <p class="card-text">{{restaurant.location}}</p>
     <!-- Link -->
-    <a href="#!" class="grey-text d-flex justify-content-end"><h5>Visit <i class="fas fa-angle-double-right"></i></h5></a>
+    <a routerLink="/restaurant" class="grey-text d-flex justify-content-end"><h5>Visit <i class="fas fa-angle-double-right"></i></h5></a>
   </div>
 
 </div>
