--- a/src/app/components/restaurant-card/restaurant-card.component.html
+++ b/src/app/components/restaurant-card/restaurant-card.component.html
@@ -1,13 +1,16 @@
+    
+    <button type="button" (click)="getRest()" class="btn btn-success float-right">View Restaurants</button>
+    
     <!-- </section> -->
     <section id="more">
       <div class="grid-container popular">
-        <div *ngFor = "let restaurant of restaurants; let i='index'">
+        <div *ngFor = "let res of restrnts; let i='index'">
               <!-- Card Light -->
 <div class="card">
 
   <!-- Card image -->
   <div class="view overlay">
-    <img class="card-img-top" src="https://mdbootstrap.com/img/Photos/Horizontal/Nature/4-col/img%20%28131%29.jpg" alt="Card image cap">
+    <img class="card-img-top" src="{{res.image_url}}" alt="Restaurant image ">
     <a>
       <div class="mask rgba-white-slight"></div>
     </a>
@@ -16,10 +19,10 @@
   <!-- Card content -->
   <div class="card-body">
     <!-- Title -->
-    <h4 class="card-title">{{restaurant.name}}</h4>
+    <h4 class="card-title">{{res.name}}</h4>
     <hr>
     <!-- Text -->
-    <p class="card-text">{{restaurant.location}}</p>
+    <p class="card-text">{{res.location}}</p>
     <!-- Link -->
     <a routerLink="/restaurant" class="grey-text d-flex justify-content-end"><h5>Visit <i class="fas fa-angle-double-right"></i></h5></a>
   </div>
