--- a/src/app/components/restaurants/restaurants.component.html
+++ b/src/app/components/restaurants/restaurants.component.html
@@ -20,8 +20,7 @@
     </section>
   </main>
 
-<restaurant-card></restaurant-card>
-<hr>
-<restaurant-card></restaurant-card>
+<rest-location></rest-location>
+
 
 <app-footer></app-footer>
