--- a/src/app/components/restaurant-card/restaurant-card.component.html
+++ b/src/app/components/restaurant-card/restaurant-card.component.html
@@ -24,13 +24,13 @@
     <!-- Text -->
     <p class="card-text">{{res.location}}</p>
     <!-- Link -->
-    <a routerLink="/restaurant" class="grey-text d-flex justify-content-end"><h5>Visit <i class="fas fa-angle-double-right"></i></h5></a>
+    <a [routerLink]="['/restaurant',res.id]" class="grey-text d-flex justify-content-end"><h5>Visit <i class="fas fa-angle-double-right"></i></h5></a>
   </div>
 
 </div>
 <!-- Card Light -->
-      </div>
-      </div>
-    </section>
-    <!-- </section> -->
+    </div>
+    </div>
+  </section>
+  <!-- </section> -->
 
