Add review, food section categories to restaurant page

--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -23,12 +23,11 @@
           Username
         </a>
         <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" routerLink="orders">My Orders</a>
             <!-- to be displayed if user is a Restaurant Owner-->
-            <div class="dropdown-divider"></div>
             <a class="dropdown-item" routerLink="/admin/orders">Customer Orders</a>
             <a class="dropdown-item" routerLink="/">Add Restaurant</a>
           <div class="dropdown-divider"></div>
+          <!-- to be displayed to all-->
           <a class="dropdown-item" routerLink="/">Log Out</a>
         </div>
       </li>
