--- a/src/app/components/rest/rest.component.css
+++ b/src/app/components/rest/rest.component.css
@@ -32,6 +32,15 @@ h3:after {
   margin: 12px auto 20px;
 }
 
+
+.menu-stuff h3:after {
+  content: '';
+  background: rgb(83, 74, 73);
+  display: block;
+  height: 1px;
+  width: 10%;
+  margin: 12px auto 30px;
+}
 .jumbotron .header .lead {
   letter-spacing: 1px;
   line-height: 15px;
