--- a/src/app/components/restaurant-card/restaurant-card.component.css
+++ b/src/app/components/restaurant-card/restaurant-card.component.css
@@ -1,51 +1,93 @@
 /*------CSS Grid------*/
-.grid-container2 {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-    grid-gap: 1rem;
-    width: 86%;
-    margin: 0 auto;
-    margin-bottom: 50px;
+
+
+.moreHeader {
+  padding-top: 15px;
+  width: 95%;
+  margin: 0 auto;
+  display: flex;
+  justify-content: space-between;
+  color: #444;
+
 }
+
+hr {
+  margin-bottom: 35px;
+}
+
+.btn {
+  border: none !important;
+}
+
+.btn-light {
+  background-color: #f1f1f1 !important;
+  border-radius: none !important;
+}
+
+.btn-light :hover,
+.btn-light :onclick {
+  background-color: #ffffff !important;
+  border-radius: none;
+}
+
+
+
+/*-------------*/
+.grid-container2 {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  grid-gap: 1rem;
+  width: 86%;
+  margin: 0 auto;
+  margin-bottom: 50px;
+}
+
 /*------Popular Restaurants Sections--------*/
 
 
 .grid-container {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-    grid-gap: 1rem;
-    width: 86%;
-    margin: 0 auto;
-    margin-bottom: 50px;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  grid-gap: 1rem;
+  width: 86%;
+  margin: 0 auto;
+  margin-bottom: 50px;
 }
+
 /*------Card Section-----*/
 .card {
-    overflow: hidden;
+  overflow: hidden;
 }
+
 .card:focus,
 .card:hover {
-    box-shadow: 0 5px 11px 0 rgba(0, 0, 0, 0.18), 0 4px 15px 0 rgba(0, 0, 0, 0.15);
+  box-shadow: 0 5px 11px 0 rgba(0, 0, 0, 0.18), 0 4px 15px 0 rgba(0, 0, 0, 0.15);
 }
+
 .card img {
-    max-width: 100%;
-    -moz-transition: all 0.6s;
-    -webkit-transition: all 0.6s;
-    transition: all 0.6s;
+  max-width: 100%;
+  -moz-transition: all 0.6s;
+  -webkit-transition: all 0.6s;
+  transition: all 0.6s;
 }
+
 .card:focus,
 .card:hover img {
-    box-shadow: 0 5px 11px 0 rgba(0, 0, 0, 0.18), 0 4px 15px 0 rgba(0, 0, 0, 0.15);
-    -moz-transform: scale(1.1);
-    -webkit-transform: scale(1.1);
-    transform: scale(1.1);
+  box-shadow: 0 5px 11px 0 rgba(0, 0, 0, 0.18), 0 4px 15px 0 rgba(0, 0, 0, 0.15);
+  -moz-transform: scale(1.1);
+  -webkit-transform: scale(1.1);
+  transform: scale(1.1);
 }
-h4{
-    font-size: 1em;
+
+h4 {
+  font-size: 1em;
 }
-h5{
-    font-size: 1em;
+
+h5 {
+  font-size: 1em;
 }
-h5 a:hover{
-    text-decoration: none;
-    font-size: 1em;
+
+h5 a:hover {
+  text-decoration: none;
+  font-size: 1em;
 }
