--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,22 +1,22 @@
 <body>
 <div class="container">
-  
+
 
 <form class="form-signin">
     <div class="form-label-group">
-      <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
+      <input type="email" id="inputEmail" class="form-control" placeholder="Email address"[(ngModel)]="loginUserData.email" name="email"  required autofocus>
     </div>
-  
+
     <div class="form-label-group">
-      <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
+      <input type="password" id="inputPassword" class="form-control" placeholder="Password" [(ngModel)]="loginUserData.password_hash" name="password_hash"required>
     </div>
-  
+
     <div class="checkbox mb-3">
       <label>
         <input type="checkbox" value="remember-me"> Remember me
       </label>
     </div>
-    <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+    <button class="btn btn-lg btn-primary btn-block" (click)="loginUser()" type="button">Sign in</button>
 
     <div class="text-center mb-3">
         <img class="mb-4" src="/docs/4.3/assets/brand/bootstrap-solid.svg" alt="" width="72" height="72">
