--- a/src/app/components/restaurant-card/restaurant-card.component.html
+++ b/src/app/components/restaurant-card/restaurant-card.component.html
@@ -1,8 +1,13 @@
 <div class="container-fluid">
 
   <div class="moreHeader row">
-    <div class="col-xs-6" (click)="getRest()">
-      <h2>POPULAR RESTAURANTS</h2>
+    <div class="col-xs-6" >
+      <div class="btn-group ">
+          <button type="button" class="btn btn-white" (click)="getRest()" type="button">
+              VIEW POPULAR RESTAURANTS
+          </button>
+      </div>
+      <!-- <button class="btn btn-white" (click)="getRest()" type="button"><h2></h2></button> -->
     </div>
     <div class="btn-group ">
       <button type="button" class="btn btn-white dropdown-toggle" data-toggle="dropdown" aria-haspopup="true"
