--- a/src/app/components/signup/signup.component.html
+++ b/src/app/components/signup/signup.component.html
@@ -1,34 +1,51 @@
-<body>
-  <div class="container">
+<div class="py-5">
+  <div class="row">
+    <div class="col-md-6 mx-auto">
+      <span class="anchor" id="formLogin"></span>
 
-    <form class="form-signin">
-      <div class="form-label-group">
-        <input type="text" id="inputName" class="form-control" placeholder="Name" required autofocus>
-      </div>
-
-      <div class="form-label-group">
-        <input type="email" id="inputPassword" class="form-control" placeholder="Email address" required>
-      </div>
-
-      <div class="form-label-group">
-          <input type="text" id="inputLocation" class="form-control" placeholder="Location" required autofocus>
+      <!-- form card login -->
+      <div class="card rounded-0">
+        <div class="card-header">
+          <h3 class="mb-0">Register</h3>
         </div>
-
-        <div class="form-label-group">
-            <input type="tel" id="inputPhoneNumber" class="form-control" placeholder="Phone Number" required autofocus>
-          </div>
-
-      <div class="form-label-group">
-        <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
+        <div class="card-body">
+          <form class="form">
+            <div class="form-group">
+              <label for="uname1">Username</label>
+              <input type="text" [(ngModel)]="registerUserData.username" name="username" class="form-control rounded-0" required>
+            </div>
+            <div class="form-group">
+              <label>Email</label>
+              <input type="email" [(ngModel)]="registerUserData.email" name="email" class="form-control rounded-0"  required>
+            </div>
+            <div class="form-group">
+              <label>Password</label>
+              <input type="password" [(ngModel)]="registerUserData.password_hash" name="password_hash" class="form-control rounded-0"  required>
+            </div>
+            <div class="form-group">
+              <label>Phone Number</label>
+              <input type="number" [(ngModel)]="registerUserData.phonenumber" name="phonenumber" class="form-control rounded-0"  required>
+            </div>
+            <div class="form-group">
+              <label>Location</label>
+              <input type="text" [(ngModel)]="registerUserData.location" name="location" class="form-control rounded-0"  required>
+            </div>
+            <!-- <div class="form-group">
+              <label>Role</label>
+              <input type="text" [(ngModel)]="registerUserData.role" name="role" class="form-control rounded-0" disabled value="User"  required>
+            </div> -->
+            <button type="button" (click)="registerUser()" class="btn btn-primary float-right">Register</button>
+          </form>
+        </div>
+        <!--/card-block-->
+        <p class="mt-5 mb-3 text-muted text-center">&copy; Foodiez | 2019</p>
       </div>
+      <!-- /form card login -->
 
-      <div class="form-label-group">
-        <input type="password" id="inputPassword" class="form-control" placeholder="Confirm Password" required>
-      </div>
-
-      <a routerLink="/login"><button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button></a>
-
-      <p class="mt-5 mb-3 text-muted text-center">&copy; Foodiez | 2019</p>
-    </form>
+    </div>
   </div>
-</body>
+</div>
+
+
+
+
