--- a/src/app/components/restaurant-card/restaurant-card.component.html
+++ b/src/app/components/restaurant-card/restaurant-card.component.html
@@ -9,7 +9,7 @@
       </div>
       <!-- <button class="btn btn-white" (click)="getRest()" type="button"><h2></h2></button> -->
     </div>
-    <div class="btn-group ">
+    <!-- <div class="btn-group ">
       <button type="button" class="btn btn-white dropdown-toggle" data-toggle="dropdown" aria-haspopup="true"
         aria-expanded="false">
         Location
@@ -18,7 +18,7 @@
           <a class="dropdown-item" routerLink="/restaurant-list/Lang'atta"> Lang'atta </a>
           <a class="dropdown-item" routerLink="/restaurant-list/Mombasa%20Road"> Mombasa Road</a>
         </div>
-    </div>
+    </div> -->
   </div>
   <hr>
 </div>
